Handling concurrent inputs using VirtualThreads